seems like a nice checkpoint

--- a/models/blog.ini
+++ b/models/blog.ini
@@ -7,8 +7,12 @@ hidden = yes
 label = Title
 type = string
 
-[fields.tagline]
-label = Tagline
+[fields.heading]
+label = Heading
+type = string
+
+[fields.subheading]
+label = Subheading
 type = string
 
 [children]
