--- a/models/blog-post.ini
+++ b/models/blog-post.ini
@@ -8,16 +8,15 @@ label = Title
 type = string
 size = large
 
+[fields.subtitle]
+label = Title
+type = string
+size = large
+
 [fields.author]
 label = Author
 type = string
 width = 1/2
-
-[fields.twitter_handle]
-label = Twitter Handle
-type = string
-width = 1/4
-addon_label = @
 
 [fields.pub_date]
 label = Publication date
