Added a bool to set published or not. page still appears with absolute path, but not in pagination/blog

--- a/models/blog-post.ini
+++ b/models/blog-post.ini
@@ -18,6 +18,11 @@ label = Author
 type = string
 width = 1/2
 
+[fields.published]
+label = Published
+type = boolean
+default = false
+
 [fields.pub_date]
 label = Publication date
 type = date
