--- a/models/pottery.ini
+++ b/models/pottery.ini
@@ -19,3 +19,13 @@ size = 1/4
 [fields.description]
 label = Description
 type = markdown
+
+[fields.published]
+label = Published
+type = boolean
+default = false
+
+[fields.forsale]
+label = Forsale
+type = boolean
+default = false
