--- a/models/gallery.ini
+++ b/models/gallery.ini
@@ -4,6 +4,10 @@ label = Gallery
 hidden = yes
 protected = yes
 
+[fields.title]
+label = Title
+type = string
+
 [children]
 model = pottery
 order_by = -date, name
